<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.admin.AdminAddFragment">

    <TextView
        android:id="@+id/tv_add_what"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_add_what" />

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_event"/>

    <Button
        android:id="@+id/btn_add_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_post" />

    <Button
        android:id="@+id/btn_add_give_away"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_give_away"/>

</LinearLayout>