<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.danshal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.danshal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_admin_add"
        android:name="com.example.danshal.ui.admin.AdminAddFragment"
        android:label="@string/menu_admin_add"
        tools:layout="@layout/fragment_admin_add" />

    <fragment
        android:id="@+id/nav_admin_users"
        android:name="com.example.danshal.ui.admin.AdminUsersFragment"
        android:label="@string/menu_admin_users"
        tools:layout="@layout/fragment_admin_users" />

    <fragment
        android:id="@+id/nav_admin_dashboard"
        android:name="com.example.danshal.ui.admin.AdminDashboardFragment"
        android:label="@string/menu_admin_dashboard"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.danshal.ui.login.LoginFragment"
        android:label="Inloggen"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.danshal.ui.login.RegisterFragment"
        android:label="Registreren"
        tools:layout="@layout/register_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.danshal.ui.login.ProfileFragment"
        android:label="Registreren"
        tools:layout="@layout/profile_fragment" />

</navigation>