<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/address_title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_yellow"
        android:text="@string/admin_add_address" />

    <LinearLayout
        android:id="@+id/ll_first"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/admin_add_address_housenumber"
            android:textColorHint="@color/theme_yellow"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/theme_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_housenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/theme_grey"
                android:inputType="number"
                android:textColor="@color/theme_yellow"
                android:textColorHint="@color/theme_yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/admin_add_address_housenumber_ext"
            android:textColorHint="@color/theme_yellow"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/theme_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_housenumber_ext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/theme_grey"
                android:inputType="text"
                android:textColor="@color/theme_yellow"
                android:textColorHint="@color/theme_yellow" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/admin_add_address_street"
        android:textColorHint="@color/theme_yellow"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/theme_yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_grey"
            android:inputType="text"
            android:textColor="@color/theme_yellow"
            android:textColorHint="@color/theme_yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/admin_add_address_postcode"
        android:textColorHint="@color/theme_yellow"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/theme_yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_grey"
            android:inputType="text"
            android:textColor="@color/theme_yellow"
            android:textColorHint="@color/theme_yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/admin_add_address_place"
        android:textColorHint="@color/theme_yellow"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/theme_yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_grey"
            android:inputType="text"
            android:textColor="@color/theme_yellow"
            android:textColorHint="@color/theme_yellow" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>