<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_yellow"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_name"
        android:textColorHint="@color/theme_yellow"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/theme_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_admin_users_24"
        app:startIconTint="@color/theme_yellow"
        tools:layout_editor_absoluteX="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_black"
            android:enabled="false"
            android:focusable="false"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/theme_yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/theme_yellow"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/theme_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_name"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/theme_yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_black"
            android:enabled="false"
            android:focusable="false"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/theme_yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update_popup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/theme_black"
        android:elevation="10dp"
        android:enabled="true"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Button
        android:id="@+id/btn_annuleren_popup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/theme_black"
        android:elevation="10dp"
        android:enabled="true"
        android:text="@string/annuleren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_popup" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/admin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_username" />

</androidx.constraintlayout.widget.ConstraintLayout>